# slack-canvas-creator-from-threads

./: .editorconfig  .env.example  .flake8  README.md  deploy.sh  pyproject.toml  requirements.txt  run.py  setup.py  slack-canvas-creator-from-threads.service  slack-canvas-creator.service
docs/: systemd.md
slack_canvas_creator_from_threads/: __init__.py  app.py  config.py  main.py  openai_service.py  slack_service.py
