[project]
name = "slack-canvas-creator-from-threads"
version = "0.1.0"
description = ""
authors = [
    {name = "Yunhyeon Jeong",email = "jjj999to@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "slack-bolt (>=1.23.0,<2.0.0)",
    "slack-sdk (>=3.36.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
