[project]
name = "slack-canvas-creator-from-threads"
version = "0.1.0"
description = "Slack app to create canvases from threads using LLMs."
authors = [
    {name = "Yunhyeon Jeong",email = "jjj999to@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.12.15,<4.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "slack-bolt (>=1.23.0,<2.0.0)",
    "slack-sdk (>=3.36.0,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.6.16"
pytest = "^8.4.1"
flake8 = "^7.3.0"

[tool.poetry.scripts]
lint = "flake8 slack_canvas_creator_from_threads/"
